--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en-US">
     <head>
+        <meta charset="utf-8">
         <link rel="stylesheet" type="text/css" href="Felipe_webpage_style.css">
         <title>Felipe Carreno Arreola</title>
     </head>
-<body class="body"></body>
+<body class="body" id=home>
     <div class="divTitle">
     <h1>Felipe Carreño Arreola</h1>
 </div>
@@ -17,16 +18,14 @@
 </div></nav>
 <hr>
 <br>
-<body>
  <div class="div1">
     <h2>Introduction</h2>
     <p> My name is Felipe Carreño Arreola, I'm a Sophomore at Oregon State University-Cascades studying Computer Science. 
         I have built my own computer, subnetted, setup telecommunications (CallManager), configured routers and switches.
             <img class="img1" src="https://i.imgur.com/d7QMAJT.jpg?2">
     </p> 
- </div></body>
+ </div>
 <br>
-<body>
     <div class="div2">    
        <h3>Hobbies</h3>
        <h4>Hiking</h4>
@@ -38,6 +37,7 @@
        <p>I enjoy playing computer games. The majority of games I play are Role Playing Games (RPGs)
         <img class="img3" src="https://i.imgur.com/sUU6fwy.jpg?1">
     </p>
- </div></body>
+ </div>
 <br>
+</body>
 </html>
