--- a/hobbies.html
+++ b/hobbies.html
@@ -40,7 +40,7 @@
         <img class="gorge" src="https://i.imgur.com/xjJxBnF.jpg?">
         <hr class="clear">
         <h1> Gaming</h1>
-        <p class="lead"> I enjoy playing computer games. The majority of games I play are Role Playing Games (RPGs)</p>
+        <p class="lead"> I enjoy playing computer games. The majority of games I play are Role Playing Games (RPGs).</p>
         <img class="skyrim" src="https://i.imgur.com/sUU6fwy.jpg?1">
       </main>
      </div>
