--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             <a class="nav-link active" href="index.html">Home</a>
             <a class="nav-link" href="introduction.html">Intro.</a>
             <a class="nav-link" href="hobbies.html">Hobbies</a>
+            <a class="nav-link" href="portfolio.html">Portfolio</a>
           </nav>
         </div>
       </header>
