--- a/portfolio.html
+++ b/portfolio.html
@@ -23,7 +23,7 @@
     <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
       <header class="masthead mb-auto">
         <div class="inner">
-          <h3 class="masthead-brand">Intro.</h3>
+          <h3 class="masthead-brand">Portfolio</h3>
           <nav class="nav nav-masthead justify-content-center">
             <a class="nav-link" href="index.html">Home</a>
             <a class="nav-link" href="introduction.html">Intro.</a>
@@ -33,9 +33,7 @@
         </div>
       </header>
 
-      <img class="profile-pic" src="https://i.imgur.com/yTOc3lx.jpg?2">
-      <br>
-
+      
       <div class="box-transp-01">
       <main role="main" class="inner cover">
         <h1 class="cover-heading">Portfolio</h1>
