--- a/portfolio.html
+++ b/portfolio.html
@@ -41,12 +41,14 @@
       </main>
       </div>
 
+      <section class="box-transp-f">
       <footer class="mastfoot mt-auto">
         <div class="inner">
             <p>Felipe Carreño Arreola || OSU Cascades Email: <a href="mailto:arreolaf@oregonstate.edu">arreolaf@oregonstate.edu</a> <br><img src="https://i.imgur.com/1xG32b2.png"> <a href="https://github.com/FelipeCArreola">GitHub</a> || <img src="https://i.imgur.com/wO2A0jC.png"> <a href="https://stackoverflow.com/users/10423421/felipe-c-arreola?tab=profile">Stack Overflow</a> || <img src="https://i.imgur.com/rF2UoAi.png"> <a href="#">Resume</a></p>
         </div>
       </footer>
     </div>
+    </section>
 
 
     <!-- Bootstrap core JavaScript
