--- a/portfolio.html
+++ b/portfolio.html
@@ -44,7 +44,7 @@
       <footer class="mastfoot mt-auto">
         <section class="box-transp-f">
         <div class="inner">
-            <p>Felipe Carreño Arreola || OSU Cascades Email: <a href="mailto:arreolaf@oregonstate.edu">arreolaf@oregonstate.edu</a> <br><img src="https://i.imgur.com/1xG32b2.png"> <a href="https://github.com/FelipeCArreola">GitHub</a> || <img src="https://i.imgur.com/wO2A0jC.png"> <a href="https://stackoverflow.com/users/10423421/felipe-c-arreola?tab=profile">Stack Overflow</a> || <img src="https://i.imgur.com/rF2UoAi.png"> <a href="#">Resume</a></p>
+            <p>Felipe Carreño Arreola || OSU Cascades Email: <a href="mailto:arreolaf@oregonstate.edu">arreolaf@oregonstate.edu</a> <br><img src="https://i.imgur.com/1xG32b2.png"> <a href="https://github.com/FelipeCArreola" target="_blank">GitHub</a> || <img src="https://i.imgur.com/wO2A0jC.png"> <a href="https://stackoverflow.com/users/10423421/felipe-c-arreola?tab=profile" target="_blank">Stack Overflow</a> || <img src="https://i.imgur.com/rF2UoAi.png"> <a href="Files/Felipe Carreño Arreola_resume_Final.pdf" target="_blank">Resume</a></p>
         </div>
         </section>
       </footer>
