--- a/hobbies.html
+++ b/hobbies.html
@@ -48,7 +48,7 @@
 
       <footer class="mastfoot mt-auto">
         <div class="inner">
-          <p> Felipe Carreño Arreola || OSU Cascades Email: <a href="mailto:arreolaf@oregonstate.edu">arreolaf@oregonstate.edu</a> <br><img src="https://i.imgur.com/1xG32b2.png"> <a href="https://github.com/FelipeCArreola" target="_blank">GitHub</a> || <img src="https://i.imgur.com/wO2A0jC.png"> <a href="https://stackoverflow.com/users/10423421/felipe-c-arreola?tab=profile" target="_blank">Stack Overflow</a> || <img src="https://i.imgur.com/rF2UoAi.png"> <a href="Files/Felipe Carreño Arreola_resume_Final.pdf" target="_blank">Resume</a></p>
+          <p> Felipe Carreño Arreola || OSU Cascades Email: <a href="mailto:arreolaf@oregonstate.edu">arreolaf@oregonstate.edu</a> <br><a href="https://github.com/FelipeCArreola" target="_blank"><img src="https://i.imgur.com/1xG32b2.png"></a> <a href="https://github.com/FelipeCArreola" target="_blank">GitHub</a> || <a href="https://stackoverflow.com/users/10423421/felipe-c-arreola?tab=profile" target="_blank"><img src="https://i.imgur.com/wO2A0jC.png"></a> <a href="https://stackoverflow.com/users/10423421/felipe-c-arreola?tab=profile" target="_blank">Stack Overflow</a> || <a href="Files/Felipe Carreño Arreola_resume_Final.pdf" target="_blank"><img src="https://i.imgur.com/rF2UoAi.png"></a> <a href="Files/Felipe Carreño Arreola_resume_Final.pdf" target="_blank">Resume</a></p>
         </div>
       </footer>
     </div>
