--- a/hobbies.html
+++ b/hobbies.html
@@ -15,6 +15,9 @@
     <link rel="stylesheet" type="text/css" href="style_profile_Felipe.css">
     <link href="https://fonts.googleapis.com/css?family=KoHo|Nanum+Gothic|Ubuntu" rel="stylesheet">
 
+    <!--JavaScript-->
+    <script src="main.js"></script>
+
   </head>
 
   <body class="body-hobbies">
@@ -24,10 +27,15 @@
         <div class="inner">
           <h3 class="masthead-brand">Hobbies</h3>
           <nav class="nav nav-masthead justify-content-center">
-            <a class="nav-link" href="index.html">Home</a>
-            <a class="nav-link" href="introduction.html">Intro.</a>
-            <a class="nav-link active" href="hobbies.html">Hobbies</a>
-            <a class="nav-link" href="portfolio.html">Portfolio</a>
+            <a class="nav-link" href="https://felipecarreola.github.io/index.html">Home</a>
+            <a class="nav-link" href="https://felipecarreola.github.io/introduction.html">Intro.</a>
+            <a class="nav-link active" href="https://felipecarreola.github.io/hobbies.html">Hobbies</a>
+            <div class="dropdown">
+                <button onclick="myFunction()" class="dropbtn">Portfolio</button>
+                  <div id="myDropdown" class="dropdown-content">
+                      <a class="nav-link" href="https://felipecarreola.github.io/portfolio.html">Portfolio</a>
+                      <a class="nav-link" href="https://felipecarreola.github.io/zagster-client/">>>Zagster</a>
+                  </div>
           </nav>
         </div>
       </header>
