--- a/portfolio.html
+++ b/portfolio.html
@@ -15,19 +15,29 @@
     <link rel="stylesheet" type="text/css" href="style_profile_Felipe.css">
     <link href="https://fonts.googleapis.com/css?family=KoHo|Nanum+Gothic|Ubuntu" rel="stylesheet">
 
+    <!--JavaScript-->
+    <script src="main.js"></script>
+
   </head>
 
   <body class="body-portfolio">
 
     <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
+      
       <header class="masthead mb-auto">
         <div class="inner">
           <h3 class="masthead-brand">Portfolio</h3>
           <nav class="nav nav-masthead justify-content-center">
-            <a class="nav-link" href="index.html">Home</a>
-            <a class="nav-link" href="introduction.html">Intro.</a>
-            <a class="nav-link" href="hobbies.html">Hobbies</a>
-            <a class="nav-link active" href="portfolio.html">Portfolio</a>
+            <a class="nav-link" href="https://felipecarreola.github.io/index.html">Home</a>
+            <a class="nav-link" href="https://felipecarreola.github.io/introduction.html">Intro.</a>
+            <a class="nav-link" href="https://felipecarreola.github.io/hobbies.html">Hobbies</a>
+            <div class="dropdown">
+              <button onclick="myFunction()" class="dropbtn active">Portfolio</button>
+                <div id="myDropdown" class="dropdown-content">
+                    <a class="nav-link" href="https://felipecarreola.github.io/portfolio.html">Portfolio</a>
+                    <a class="nav-link" href="https://felipecarreola.github.io/zagster-client/">>>Zagster</a>
+                </div>
+            </div>
           </nav>
         </div>
       </header>
