--- a/portfolio.html
+++ b/portfolio.html
@@ -34,7 +34,7 @@
             <div class="dropdown">
               <button onclick="myFunction()" class="dropbtn active">Portfolio</button>
                 <div id="myDropdown" class="dropdown-content">
-                    <a class="nav-link" href="https://felipecarreola.github.io/portfolio.html">Portfolio</a>
+                    <a class="nav-link active" href="https://felipecarreola.github.io/portfolio.html">Portfolio</a>
                     <a class="nav-link" href="https://felipecarreola.github.io/zagster-client/">>>Zagster</a>
                 </div>
             </div>
