--- a/hobbies.html
+++ b/hobbies.html
@@ -31,17 +31,24 @@
             <a class="nav-link" href="https://felipecarreola.github.io/index.html">Home</a>
             <a class="nav-link" href="https://felipecarreola.github.io/introduction.html">Intro.</a>
             <a class="nav-link active" href="https://felipecarreola.github.io/hobbies.html">Hobbies</a>
+            
             <div class="dropdown">
                 <button onclick="myFunction()" class="dropbtn">Portfolio</button>
                   <div id="myDropdown" class="dropdown-content">
                       <a class="nav-link" href="https://felipecarreola.github.io/portfolio.html">Portfolio</a>
-                      <a class="nav-link" href="https://felipecarreola.github.io/zagster-client/">>>Zagster</a>
+                      
+                      <ul class="dropdown-list">
+                      <li><a class="nav-link" href="https://felipecarreola.github.io/zagster-client/">Zagster</a></li>
+                      </ul>
+
                   </div>
+            </div>
+
           </nav>
         </div>
       </header>
 
-    <div class="box-transp-02">
+    <div class="box-transp-hobbies">
      <div class="column">
       <main role="main" class="inner cover">
         <h1 class="cover-heading">Hiking</h1>
