--- a/introduction.html
+++ b/introduction.html
@@ -31,12 +31,19 @@
             <a class="nav-link" href="https://felipecarreola.github.io/index.html">Home</a>
             <a class="nav-link active" href="https://felipecarreola.github.io/introduction.html">Intro.</a>
             <a class="nav-link" href="https://felipecarreola.github.io/hobbies.html">Hobbies</a>
+            
             <div class="dropdown">
                 <button onclick="myFunction()" class="dropbtn">Portfolio</button>
                   <div id="myDropdown" class="dropdown-content">
                       <a class="nav-link" href="https://felipecarreola.github.io/portfolio.html">Portfolio</a>
-                      <a class="nav-link" href="https://felipecarreola.github.io/zagster-client/">>>Zagster</a>
+                      
+                      <ul class="dropdown-list">
+                      <li><a class="nav-link" href="https://felipecarreola.github.io/zagster-client/">Zagster</a></li>
+                      </ul>
+
                   </div>
+            </div>
+
           </nav>
         </div>
       </header>
@@ -44,7 +51,7 @@
       <img class="profile-pic" src="https://i.imgur.com/yTOc3lx.jpg?2">
       <br>
 
-      <div class="box-transp-01">
+      <div class="box-transp-intro">
       <main role="main" class="inner cover">
         <h1 class="cover-heading">Introduction</h1>
         <p class="lead">My name is Felipe Carreño Arreola, I'm a Sophomore at Oregon State University-Cascades studying Computer Science. I have built my own computer, subnetted, setup telecommunications (CallManager), and configured routers and switches.</p>
