--- a/hobbies.html
+++ b/hobbies.html
@@ -48,25 +48,26 @@
         </div>
       </header>
 
-    <div class="box-transp-hobbies">
+    <section class="box-transp-hobbies">
      <div class="column">
       <main role="main" class="inner cover">
         <h1 class="cover-heading">Hiking</h1>
-        <p class="lead">A few places I have hiked include Zion National Park (Utah), Red Rock Canyon (Nevada), and Columbia River Gorge (Oregon).</p>
-        <img class="gorge" src="https://i.imgur.com/xjJxBnF.jpg?">
+          <p class="lead">A few places I have hiked include Zion National Park (Utah), Red Rock Canyon (Nevada), and Columbia River Gorge (Oregon).</p>
+            <img class="gorge" src="https://i.imgur.com/xjJxBnF.jpg?">
         <hr class="clear">
         <h1> Gaming</h1>
-        <p class="lead"> I enjoy playing computer games. The majority of games I play are Role Playing Games (RPGs).</p>
-        <img class="skyrim" src="https://i.imgur.com/sUU6fwy.jpg?1">
+          <p class="lead"> I enjoy playing computer games. The majority of games I play are Role Playing Games (RPGs).</p>
+            <img class="skyrim" src="https://i.imgur.com/sUU6fwy.jpg?1">
       </main>
      </div>
-    </div>
+    </section>
 
       <footer class="mastfoot mt-auto">
         <div class="inner">
           <p> Felipe Carreño Arreola || OSU Cascades Email: <a href="mailto:arreolaf@oregonstate.edu">arreolaf@oregonstate.edu</a> <br><a href="https://github.com/FelipeCArreola" target="_blank"><img src="https://i.imgur.com/1xG32b2.png"></a> <a href="https://github.com/FelipeCArreola" target="_blank">GitHub</a> || <a href="https://stackoverflow.com/users/10423421/felipe-c-arreola?tab=profile" target="_blank"><img src="https://i.imgur.com/wO2A0jC.png"></a> <a href="https://stackoverflow.com/users/10423421/felipe-c-arreola?tab=profile" target="_blank">Stack Overflow</a> || <a href="Files/Felipe Carreño Arreola_resume_Final.pdf" target="_blank"><img src="https://i.imgur.com/rF2UoAi.png"></a> <a href="Files/Felipe Carreño Arreola_resume_Final.pdf" target="_blank">Resume</a></p>
         </div>
       </footer>
+      
     </div>
 
 
@@ -77,5 +78,7 @@
     <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
     <script src="https://getbootstrap.com/docs/4.1/assets/js/vendor/popper.min.js"></script>
     <script src="https://getbootstrap.com/docs/4.1/dist/js/bootstrap.min.js"></script>
+  
   </body>
+
 </html>
