--- a/introduction.html
+++ b/introduction.html
@@ -50,19 +50,20 @@
 
       <img class="profile-pic" src="https://i.imgur.com/yTOc3lx.jpg?2">
       <br>
-
-      <div class="box-transp-intro">
-      <main role="main" class="inner cover">
-        <h1 class="cover-heading">Introduction</h1>
-        <p class="lead">My name is Felipe Carreño Arreola, I'm a Sophomore at Oregon State University-Cascades studying Computer Science. I have built my own computer, subnetted, setup telecommunications (CallManager), and configured routers and switches.</p>
-      </main>
-      </div>
-
+    
+      <section class="box-transp-intro">
+        <main role="main" class="inner cover">  
+          <h1 class="cover-heading">Introduction</h1>
+            <p class="lead">My name is Felipe Carreño Arreola, I'm a Sophomore at Oregon State University-Cascades studying Computer Science. I have built my own computer, subnetted, setup telecommunications (CallManager), and configured routers and switches.</p>
+        </main>
+      </section>
+  
       <footer class="mastfoot mt-auto">
         <div class="inner">
           <p> Felipe Carreño Arreola || OSU Cascades Email: <a href="mailto:arreolaf@oregonstate.edu">arreolaf@oregonstate.edu</a> <br><a href="https://github.com/FelipeCArreola" target="_blank"><img src="https://i.imgur.com/1xG32b2.png"></a> <a href="https://github.com/FelipeCArreola" target="_blank">GitHub</a> || <a href="https://stackoverflow.com/users/10423421/felipe-c-arreola?tab=profile" target="_blank"><img src="https://i.imgur.com/wO2A0jC.png"></a> <a href="https://stackoverflow.com/users/10423421/felipe-c-arreola?tab=profile" target="_blank">Stack Overflow</a> || <a href="Files/Felipe Carreño Arreola_resume_Final.pdf" target="_blank"><img src="https://i.imgur.com/rF2UoAi.png"></a> <a href="Files/Felipe Carreño Arreola_resume_Final.pdf" target="_blank">Resume</a></p>
         </div>
       </footer>
+    
     </div>
 
 
@@ -73,5 +74,7 @@
     <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
     <script src="https://getbootstrap.com/docs/4.1/assets/js/vendor/popper.min.js"></script>
     <script src="https://getbootstrap.com/docs/4.1/dist/js/bootstrap.min.js"></script>
+
   </body>
+  
 </html>
