--- a/portfolio.html
+++ b/portfolio.html
@@ -49,22 +49,23 @@
       </header>
 
       
-      <div class="box-transp-portfolio">
-      <main role="main" class="inner cover">
-        <h1 class="cover-heading">Portfolio</h1>
-        <p class="lead"><img src="https://i.imgur.com/yhkzwvR.png"></p>
-      </main>
-      </div>
+      <section class="box-transp-portfolio">
+        <main role="main" class="inner cover">
+          <h1 class="cover-heading">Portfolio</h1>
+            <p class="lead"><img src="https://i.imgur.com/yhkzwvR.png"></p>
+        </main>
+      </section>
 
+      
       <footer class="mastfoot mt-auto">
-        <section class="box-transp-footer">
-        <div class="inner">
-          <p> Felipe Carreño Arreola || OSU Cascades Email: <a href="mailto:arreolaf@oregonstate.edu">arreolaf@oregonstate.edu</a> <br><a href="https://github.com/FelipeCArreola" target="_blank"><img src="https://i.imgur.com/1xG32b2.png"></a> <a href="https://github.com/FelipeCArreola" target="_blank">GitHub</a> || <a href="https://stackoverflow.com/users/10423421/felipe-c-arreola?tab=profile" target="_blank"><img src="https://i.imgur.com/wO2A0jC.png"></a> <a href="https://stackoverflow.com/users/10423421/felipe-c-arreola?tab=profile" target="_blank">Stack Overflow</a> || <a href="Files/Felipe Carreño Arreola_resume_Final.pdf" target="_blank"><img src="https://i.imgur.com/rF2UoAi.png"></a> <a href="Files/Felipe Carreño Arreola_resume_Final.pdf" target="_blank">Resume</a></p>
+        <div class="box-transp-footer">
+          <div class="inner">
+            <p> Felipe Carreño Arreola || OSU Cascades Email: <a href="mailto:arreolaf@oregonstate.edu">arreolaf@oregonstate.edu</a> <br><a href="https://github.com/FelipeCArreola" target="_blank"><img src="https://i.imgur.com/1xG32b2.png"></a> <a href="https://github.com/FelipeCArreola" target="_blank">GitHub</a> || <a href="https://stackoverflow.com/users/10423421/felipe-c-arreola?tab=profile" target="_blank"><img src="https://i.imgur.com/wO2A0jC.png"></a> <a href="https://stackoverflow.com/users/10423421/felipe-c-arreola?tab=profile" target="_blank">Stack Overflow</a> || <a href="Files/Felipe Carreño Arreola_resume_Final.pdf" target="_blank"><img src="https://i.imgur.com/rF2UoAi.png"></a> <a href="Files/Felipe Carreño Arreola_resume_Final.pdf" target="_blank">Resume</a></p>
+          </div>
         </div>
-        </section>
       </footer>
-    </div>
 
+    </div>
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
@@ -73,5 +74,7 @@
     <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
     <script src="https://getbootstrap.com/docs/4.1/assets/js/vendor/popper.min.js"></script>
     <script src="https://getbootstrap.com/docs/4.1/dist/js/bootstrap.min.js"></script>
+
   </body>
+  
 </html>
