--- a/introduction.html
+++ b/introduction.html
@@ -38,7 +38,7 @@
                       <a class="nav-link" href="https://felipecarreola.github.io/portfolio.html">Portfolio</a>
                       
                       <ul class="dropdown-list">
-                      <li><a class="nav-link" href="https://felipecarreola.github.io/zagster-client/">Zagster</a></li>
+                      <li><a class="nav-link" href="https://felipecarreola.github.io/zagster-client/">Zagster<br>Client</a></li>
                       </ul>
 
                   </div>
@@ -76,5 +76,5 @@
     <script src="https://getbootstrap.com/docs/4.1/dist/js/bootstrap.min.js"></script>
 
   </body>
-  
+
 </html>
