--- a/portfolio.html
+++ b/portfolio.html
@@ -56,12 +56,12 @@
          
              <p>
 
-                <h4><a href="https://felipecarreola.github.io/zagster-client/">Zagster Client:</a></h4><br>An organized, responsive site that delivers real time values of current total of Zagster bike use throught Bend, Oregon. 
+                <h4><a href="https://felipecarreola.github.io/zagster-client/">Zagster Client:</a></h4><br>An organized, responsive site that delivers a real time value of total Zagster bike use throughout Bend, Oregon. 
               
 
                 <figure class="zagster-fig">
                   <div><a href="https://felipecarreola.github.io/zagster-client/"><img src="https://i.imgur.com/t1R5Ka7.png?1" class="zagster-img"></a></div>
-                    <figcaption>Screenshot image of my "Zagster Client" site. <br><span class="fig-caption-zag"> *Note: Total may not be current as in screenshot.<br>Please visit my site</span>
+                    <figcaption>Screenshot image of my "Zagster Client" site. <br><span class="fig-caption-zag"> *Note: Total may not be current as in screenshot.<br>Please visit my site.</span>
                     </figcaption>
                 </figure>
 
