--- a/portfolio.html
+++ b/portfolio.html
@@ -60,7 +60,7 @@
               
 
                 <figure class="zagster-fig">
-                  <div><a href="https://felipecarreola.github.io/zagster-client/"><img src="https://i.imgur.com/t1R5Ka7.png?1" class="zagster-img"></a></div>
+                  <div><a href="https://felipecarreola.github.io/zagster-client/"><img src="https://i.imgur.com/ytXMcfw.png?1" class="zagster-img"></a></div>
                     <figcaption>Screenshot image of my "Zagster Client" site. <br><span class="fig-caption-zag"> *Note: Total may not be current as in screenshot.<br>Please visit my site.</span>
                     </figcaption>
                 </figure>
