--- a/portfolio.html
+++ b/portfolio.html
@@ -56,7 +56,7 @@
          
              <p>
 
-                <h4><a href="https://felipecarreola.github.io/zagster-client/">Zagster Client:</a></h4><br>An organized, responsive site that delivers a real time value of total Zagster bike use throughout Bend, Oregon. 
+                <h4><a href="https://felipecarreola.github.io/zagster-client/">Zagster Client:</a></h4><br>An organized, responsive site that delivers a real time value of total amount of rides per station throughout Bend, Oregon. 
               
 
                 <figure class="zagster-fig">
